<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeTitle"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_marginTop="25dp"
            tools:text="@string/welcomeTitle" />

        <TextView
            android:id="@+id/homeMessage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/welcomeMessage1"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/homeMessage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/welcomeMessage2"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/homeMessage3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/welcomeMessage3"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/homeMessage4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/welcomeMessage4"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/homeMessage5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/welcomeMessage5"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/homeMessage6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/welcomeMessage6"
            android:textAlignment="center"
            android:textSize="17sp" />
    </LinearLayout>
</FrameLayout>