<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <TextView
                android:id="@+id/class_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_name"
                android:inputType="textPersonName"
                android:visibility="gone" />

            <TextView
                android:id="@+id/class_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/class_name"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie nisi dui. "
                android:textAppearance="?android:textAppearanceMedium" />

            <ImageView
                android:id="@+id/textViewOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/ic_settings_applications_primary_dark" />

            <Button
                android:id="@+id/confirm_class_name_change"
                android:layout_width="75dp"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/edit_name"
                android:text="@string/confirm"
                android:textSize="12sp"
                android:background="@color/colorPrimaryDark"
                android:visibility="gone" />

            <Button
                android:id="@+id/cancel_class_name_change"
                android:layout_width="75dp"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/edit_name"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:background="@color/colorPrimaryDark"
                android:visibility="gone" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>